--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,3 +8,4 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILE_COLLECTIONS += "meta-iot-os-configuration"
 BBFILE_PATTERN_meta-iot-os-configuration = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-iot-os-configuration = "6"
+BB_DANGLINGAPPENDS_WARNONLY = "1"
