connman: fixing connman templates, recipes etc

--- a/recipes-connectivity/connman/files/connman-wifi.toml
+++ b/recipes-connectivity/connman/files/connman-wifi.toml
@@ -1,6 +1,6 @@
 [template]
 src = "connman-wifi.tmpl"
-dest = "/var/lib/connman/wifi.conf"
+dest = "/var/lib/connman/wifi.config"
 keys = [
      "/common/device/wifi",
      "/host/device/wifi"
