--- a/recipes-connectivity/connman/files/connman-setting.toml
+++ b/recipes-connectivity/connman/files/connman-setting.toml
@@ -1,9 +1,9 @@
 [template]
 src = "connman-setting.tmpl"
-dest = "/var/lib/connman/setting"
+dest = "/var/lib/connman/settings"
 keys = [
      "/common/device/wifi",
      "/host/device/wifi"
 ]
 format = "ini"
-reload_cmd = "/bin/systemctl restart connman.service"
+reload_cmd = "/usr/libexec/connman/restart.sh"
