--- a/recipes-conffw/bcm4334x/files/bcm4334x.toml
+++ b/recipes-conffw/bcm4334x/files/bcm4334x.toml
@@ -2,9 +2,9 @@
 src = "bcm4334x.tmpl"
 dest = "/etc/modprobe.d/bcm4334x.conf"
 keys = [
+     "/factory/device/wifi",
      "/common/device/wifi",
-     "/host/device/wifi"
+     "/local/device/wifi"
 ]
 format = "ini"
 reload_cmd = "/usr/libexec/bcm4334x/bcm4334x.sh"
-
