--- a/recipes-conffw/openssh/files/openssh-fw.toml
+++ b/recipes-conffw/openssh/files/openssh-fw.toml
@@ -2,7 +2,9 @@
 src = "openssh-fw.tmpl"
 dest = "/etc/systemd/system/sshd.socket.d/openssh-ipv4.conf"
 keys = [
-     "/common/devel/ssh"
+     "/factory/devel/ssh",
+     "/common/devel/ssh",
+     "/local/devel/ssh"
 ]
 format = "ini"
 check_cmd = "/bin/systemctl stop sshd.socket"
