rpcd: Use 'admin' user for ubus session authentication
Create new user and group named 'admin' with password 'admin' which is used for
rpcd session authentication.

Signed-off-by: Amarnath Valluri <amarnath.valluri@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -7,3 +7,6 @@ BBFILE_PATTERN_conffw-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_conffw-layer = "8"
 
 LAYERDEPENDS_conffw-layer = "core openembedded-layer"
+
+USERADD_UID_TABLES_append = " conf/rpcd-passwd"
+USERADD_GID_TABLES_append = " conf/rpcd-group"
