--- a/recipes-core/rpcd/rpcd/rpcd.config
+++ b/recipes-core/rpcd/rpcd/rpcd.config
@@ -1,7 +1,7 @@
 
 config login
-	option username 'root'
-	option password '$p$root'
+	option username 'admin'
+	option password '$p$admin'
 	list read '*'
 	list write '*'
 
