rpcd: Made rpcd user configurable
Defined new variables RPCD_USER, RPCD_PASSWD and RPCD_USER_GROUP defaults to
'admin'. By using these variables one can configure what username and password
to use for rpcd/luci authentication.

Signed-off-by: Amarnath Valluri <amarnath.valluri@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,5 +8,7 @@ BBFILE_PRIORITY_conffw-layer = "8"
 
 LAYERDEPENDS_conffw-layer = "core openembedded-layer"
 
-USERADD_UID_TABLES_append = " conf/rpcd-passwd"
-USERADD_GID_TABLES_append = " conf/rpcd-group"
+CONFFW_LAYERDIR = '${@os.path.normpath("${LAYERDIR}")}'
+
+USERADD_UID_TABLES += "conf/rpcd-passwd"
+USERADD_GID_TABLES += "conf/rpcd-group"
