layer.conf: remove dependency on openembedded-layer
Signed-off-by: Amarnath Valluri <amarnath.valluri@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -6,7 +6,7 @@ BBFILE_COLLECTIONS += "conffw-layer"
 BBFILE_PATTERN_conffw-layer := "^${LAYERDIR}/"
 BBFILE_PRIORITY_conffw-layer = "8"
 
-LAYERDEPENDS_conffw-layer = "core openembedded-layer"
+LAYERDEPENDS_conffw-layer = "core"
 
 CONFFW_LAYERDIR = '${@os.path.normpath("${LAYERDIR}")}'
 
