--- a/recipes-adapters/connman-uci/files/network.config
+++ b/recipes-adapters/connman-uci/files/network.config
@@ -1,5 +1,8 @@
 # Copyright (C) 2006 OpenWrt.org
 
+config general
+    option command 'connmanupd -n'
+
 config interface loopback
 	option ifname	lo
 	option proto	static
