lighttpd: Add websocket module
Signed-off-by: Amarnath Valluri <amarnath.valluri@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,6 +8,10 @@ BBFILE_PRIORITY_conffw-layer = "8"
 
 LAYERDEPENDS_conffw-layer = "core"
 
+BBFILES_DYNAMIC += " \
+    core:${LAYERDIR}/bbappends/openembedded-core/meta/*/*/*.bbappend \
+"
+
 CONFFW_LAYERDIR = '${@os.path.normpath("${LAYERDIR}")}'
 
 USERADD_UID_TABLES += "conf/rpcd-passwd"
