--- a/recipes-core/orangerpcd/orangerpcd/orange.config
+++ b/recipes-core/orangerpcd/orangerpcd/orange.config
@@ -1,13 +1,4 @@
-config 'juci' 'juci'
-    option 'homepage' 'overview'
-
-config 'login' 'login'
-    option 'showusername' '1'
-    option 'defaultuser' 'admin'
-
-config 'localization' 'localization'
-    option default_language 'en'
-    list languages 'en'
-    list languages 'fi'
-    list languages 'sv'
+config login {USERNAME}
+    list acls 'jcui*'
+    list acls user-{USERNAME}
 
